adding answer to perticular qustion is work in progress
Signed-off-by: Ujwal <ujwal99arak@gmail.com>

--- a/qaplatform/templates/qaplatform/index.html
+++ b/qaplatform/templates/qaplatform/index.html
@@ -6,10 +6,16 @@
   </head>
   <body>
       {% extends './header.html' %}
-      {% for o in qlist %}
-        <p>
-          {{o}}
-        </p>
-      {% endfor %}
+      <ul>
+        {% for q in qlist %}
+          <li>
+            <a
+              href="{% url 'answer' question_id=q.id %}"
+            >
+            {{q}}
+          </a>
+          </li>
+        {% endfor %}
+      </ul>
   </body>
 </html>
