succesfully able to render answer form, form post is WIP

--- a/qaplatform/templates/qaplatform/index.html
+++ b/qaplatform/templates/qaplatform/index.html
@@ -10,7 +10,7 @@
         {% for q in qlist %}
           <li>
             <a
-              href="{% url 'answer' question_id=q.id %}"
+              href="{% url 'answer' question_id=q %}"
             >
             {{q}}
           </a>
