--- a/qaplatform/templates/qaplatform/form.html
+++ b/qaplatform/templates/qaplatform/form.html
@@ -1,5 +1,5 @@
-<form action="/" method="post">
+<form action="/questions/" method="post">
     {% csrf_token %}
     {{ form }}
     <button type="submit">Ask</button>
-  </form>
+</form>
