--- a/qaplatform/templates/qaplatform/form.html
+++ b/qaplatform/templates/qaplatform/form.html
@@ -1,4 +1,4 @@
-<form action="/questions/" method="post">
+<form action="/" method="post">
     {% csrf_token %}
     {{ form }}
     <button type="submit">Ask</button>
