--- a/qaplatform/templates/qaplatform/list.html
+++ b/qaplatform/templates/qaplatform/list.html
@@ -1,4 +1,9 @@
 <div>
+  <form action="/questions/" method="post">
+    {% csrf_token %}
+    {{ form }}
+    <button type="submit">Search</button>
+  </form>
     <ul>
         {% for q in qlist %}
           <li>
