--- a/templates/form.html
+++ b/templates/form.html
@@ -1,5 +1,9 @@
-<form action="/" method="post">
-    {% csrf_token %}
-    {{ form }}
-    <button type="submit">Ask</button>
-</form>
+<div>
+    {{user}}
+    {{user.is_authenticated}}
+    <form action="/" method="post">
+        {% csrf_token %}
+        {{ form }}
+        <button type="submit">Ask</button>
+    </form>
+</div>
