added basic header

--- a/templates/header.html
+++ b/templates/header.html
@@ -1,4 +1,19 @@
 
-<div>
-	Welcome to QA
+<div class="headContainer">
+	<div class="profile-dropdown">
+		<button class="profile-drawer-button">
+			<span class="material-icons">
+				person
+				</span>
+		</button>
+		<div class="dropdown-list">
+			<a href="#">My Profile</a>
+			<a href="#">Sign Out</a>
+		</div>
+	</div>
+	<input 
+	type="text"
+	name="search"
+	placeholder="search-question"
+	>
 </div>
