--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,18 @@
+{% load static %}
 <html>
     <head>
         <title>
             whatsYouQuestion
         </title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="{% static 'style.css' %}">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/vue@2.6.11"></script>
     </head>
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.11"></script>
 
     <body>
+
         {% include "header.html" %}
         {% block content %}
         {% endblock %}
