moved search component showing result still in progress

--- a/templates/header.html
+++ b/templates/header.html
@@ -11,9 +11,5 @@
 			<a href="#">Sign Out</a>
 		</div>
 	</div>
-	<input 
-	type="text"
-	name="search"
-	placeholder="search-question"
-	>
+	{%include 'search.html'%}
 </div>
