--- a/templates/question.html
+++ b/templates/question.html
@@ -1,28 +1,31 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="hcenter">
-    <div class="card">
-        <p>
-            Be curious ask Questions
-        </p>
-        <form action="/" method="post">
-            {% csrf_token %}
-            {{ form }}
-            <button type="submit" class="ask_button">Ask</button>
-        </form>
-    </div>
-</div>
-<div class="hcenter min_width">
-    <ul style="list-style-type:none; color: gray;" class="remove_bullet">
-        {% for q in qlist %}
+<div>
+
+    <div class="hcenter">
         <div class="card">
-            <li>
-                <a href="{% url 'answer' question_id=q.id %}">
-                    {{q}}
-                </a>
-            </li>
+            <p>
+                Be curious ask Questions
+            </p>
+            <form action="/" method="post">
+                {% csrf_token %}
+                {{ form }}
+                <button type="submit" class="ask_button">Ask</button>
+            </form>
         </div>
-        {% endfor %}
-    </ul>
+    </div>
+    <div class="hcenter">
+        <ul class="remove_bullet">
+            {% for q in qlist %}
+            <div class="card_list">
+                <li>
+                    <a href="{% url 'answer' question_id=q.id %}" class="anchor_decoration">
+                        {{q}}
+                    </a>
+                </li>
+            </div>
+            {% endfor %}
+        </ul>
+    </div>
 </div>
 {% endblock %}
