--- a/templates/header.html
+++ b/templates/header.html
@@ -7,7 +7,7 @@
 				</span>
 		</button>
 		<div class="dropdown-list">
-			<a href="#">My Profile</a>
+			<a href="{% url 'qaauth:profile'%}">My Profile</a>
 			<a href="#">Sign Out</a>
 		</div>
 	</div>
