--- a/templates/header.html
+++ b/templates/header.html
@@ -1,14 +1,16 @@
 
 <div class="headContainer">
 	<div class="profile-dropdown">
-		<button class="profile-drawer-button">
+		<button class="profile-button">
 			<span class="material-icons">
 				person
-				</span>
+			</span>
 		</button>
 		<div class="dropdown-list">
 			<a href="{% url 'qaauth:profile'%}">My Profile</a>
-			<a href="#">Sign Out</a>
+			{%if user.is_authenticated %}
+			<a href="{% url 'qaauth:logout_user'%}">Sign Out</a>
+			{% endif %}
 		</div>
 	</div>
 	{%include 'search.html'%}
