--- a/templates/header.html
+++ b/templates/header.html
@@ -9,7 +9,7 @@
 		<div class="dropdown-list">
 			<a href="{% url 'qaauth:profile'%}">My Profile</a>
 			{%if user.is_authenticated %}
-			<a href="{% url 'qaauth:logout_user'%}">Sign Out</a>
+			<a href="{% url 'qaauth:logout'%}">Sign Out</a>
 			{% endif %}
 		</div>
 	</div>
